# svc-explorer

./: .gitignore  AGENTS.md  Dockerfile  README.md  caddy.fragment  compose.fragment.yml  polygonalgraphexplorerdesign.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: auth.py  graph.py  main.py
app/static/css/: explorer.css
app/static/js/: api.js  main.js  panels.js  polygons.js  scene.js  shell.js  store.js
app/templates/: index.html
