[project]
name = "rndexpart-explorer"
version = "0.1.0"
description = "3D graph explorer for rndexp.art — neo4j subgraph rendered as an undulating sphere of interlinked balls."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "neo4j>=5.24,<6.0",
]

[tool.uv]
package = false
